unpackaged/main/default/objects/ET_Vehicle_Finance_Calculation__mdt/ET_Vehicle_Finance_Calculation__mdt.object-meta.xml
<CustomObject>
    <label>Vehicle Finance Calculation</label>
    <pluralLabel>Vehicle Finance Calculations</pluralLabel>
</CustomObject>