unpackaged/main/default/objects/ET_Vehicle_Finance_Calculation__mdt/fields/ET_Finance_Rate__c.field-meta.xml
<CustomField>
    <fullName>ET_Finance_Rate__c</fullName>
    <label>Finance Rate</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>