unpackaged/main/default/objects/ET_Vehicle_Finance_Calculation__mdt/fields/ET_Number_of_Financing_years__c.field-meta.xml
<CustomField>
    <fullName>ET_Number_of_Financing_years__c</fullName>
    <label>Number of  Financing years</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>